Navbar homepage full responsive

--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -1,2 +1,7 @@
-body
-    background: #8e44ad
+* 
+    margin: 0
+    padding: 0
+    border: 0 
+    font-family: sans-serif
+    list-style: none
+    box-sizing: border-box
