--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,49 @@
-body {
-  background: #8e44ad; }
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-family: sans-serif;
+  list-style: none;
+  box-sizing: border-box; }
+
+nav {
+  width: 100%;
+  background: #8e44ad;
+  position: fixed;
+  top: 0; }
+  nav h5 {
+    font-family: 'Lobster', cursive;
+    font-size: 40px;
+    color: white;
+    padding: 10px 0;
+    text-align: center; }
+  nav .navbar-icons-box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    nav .navbar-icons-box a i {
+      font-size: 18px;
+      color: white;
+      padding: 20px 0; }
+      nav .navbar-icons-box a i span {
+        margin-left: 5px; }
+
+@media (max-width: 767px) {
+  .navbar-icons-box {
+    margin: auto; } }
+
+@media (max-width: 1439px) {
+  .navbar-icons-box {
+    width: 300px; }
+  .d-none-sm-lg {
+    display: none; } }
+
+@media (min-width: 768px) {
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-around; } }
+
+@media (min-width: 1440px) {
+  .navbar-icons-box {
+    width: 500px; } }
