--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -3,6 +3,13 @@
 @media (max-width: 767px)
     .navbar-icons-box
         margin: auto
+    .search-main-box
+        width: 90%
+    .input-box
+        input
+            width: 100%
+        button
+            width: 100%
 
 
 @media (max-width: 1439px)
@@ -13,13 +20,26 @@
 
 
 @media (min-width: 768px)
+    .float-left-md
+        display: float-left
     nav
         +d-flex(center, space-around)
+    .search-main-box
+        width: 80%
+    .input-box
+        input
+            width: 70%
+        button
+            width: 29%
+
 
 
 
 @media (min-width: 1440px)
     .navbar-icons-box
         width: 500px
+    .search-box
+        h5
+            font-size: 20px
 
 
