--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,4 +1,7 @@
 @import "components/basics"
 @import "components/mixins"
-@import "components/navbar"
 @import "components/media-queries"
+@import "components/variables"
+
+@import "components/home/navbar"
+@import "components/home/main"
