--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -5,3 +5,10 @@
     font-family: sans-serif
     list-style: none
     box-sizing: border-box
+    text-decoration: none
+
+body
+    background-image: url('../css/images/dublin-bg.jpg')
+    background-size: cover
+    background-position: center center
+    background-attachment: fixed
