--- a/sass/components/home/_main.sass
+++ b/sass/components/home/_main.sass
@@ -12,8 +12,8 @@ main
             padding: 20px 10px
             h5
                 margin-bottom: 10px
-            .input-box
-                input
+            .selectors-box
+                select
                     font-size: 18px
                     height: 100%
                     padding: 10px
@@ -21,11 +21,7 @@ main
                     font-size: 18px
                     font-weight: bold
                     padding: 10px
+                    border-radius: 5px
                     background: $navbar-bg
 
-body
-    background-image: url('	https://www.franquiciasinmobiliarias.mx/sites/default/files/imagenes/imagecache/blog_nodo/blog/bienes-raices-mexico_14.jpg')
-    background-size: cover
-    background-position: center center
-    background-attachment: fixed
 
