--- a/sass/components/home/_navbar.sass
+++ b/sass/components/home/_navbar.sass
@@ -22,5 +22,7 @@ nav
                 padding: 10px 0
                 span
                     margin-left: 5px
+                    font-size: 18px
+                    font-weight: lighter
 
 
