--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -1,5 +1,4 @@
 
-    
 @media (max-width: 767px)
     .navbar-logo-box
         margin: auto
@@ -10,14 +9,6 @@
     .selectors-box
         button
             width: 100%
-
-
-@media (max-width: 1439px)
-    .navbar-icons-box
-        width: 300px
-    .d-none-sm-lg
-        display: none
-
 
 @media (min-width: 768px)
     .float-left-md
@@ -36,5 +27,14 @@
     .selectors-box
         h5
             font-size: 20px
+    .results-main-box 
+        width: 80%
 
+@media (max-width: 1439px)
+    .navbar-icons-box
+        width: 300px
+    .d-none-sm-lg
+        display: none
+    .results-main-box 
+        width: 95%
 
