--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -3,5 +3,9 @@
 @import "components/media-queries"
 @import "components/variables"
 
+
 @import "components/home/navbar"
 @import "components/home/main"
+
+
+@import "components/result/main-result"
