--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -7,7 +7,7 @@
     box-sizing: border-box
     text-decoration: none
 
-body
+.body-home
     background-image: url('../css/images/dublin-bg.jpg')
     background-size: cover
     background-position: center center
