--- a/sass/components/result/_main-result.sass
+++ b/sass/components/result/_main-result.sass
@@ -21,11 +21,13 @@
 .result-text-box
     padding: 10px
     background: $result-box-bg
-    width: 100%
     h3, p
         font-weight: bold
     .description
         color: $description
+
+.results
+    margin-top: 30px
 
 
 
