--- a/sass/components/_variables.sass
+++ b/sass/components/_variables.sass
@@ -7,3 +7,4 @@ $navbar-bg: #B53471
 $search-box-bg: rgba(149, 165, 166, .5)
 $result-box-bg: rgba(223, 228, 234, .5)
 $description: rgba(89, 98, 117,1.0)
+$title-card: #1e272e
