--- a/sass/components/result/_main-result.sass
+++ b/sass/components/result/_main-result.sass
@@ -1,5 +1,5 @@
 
-.carousel-item
+.result-carousel-item
     img
         height: 300px
         width: 100%
@@ -21,7 +21,11 @@
 .result-text-box
     padding: 10px
     background: $result-box-bg
-    h3, p
+    a
+        h3
+            font-weight: bold
+            color: $title-card
+    p
         font-weight: bold
     .description
         color: $description
