--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -11,7 +11,7 @@
     .selectors-box
         button
             width: 100%
-    .carousel-detail-item
+    .detail-carousel-item
         img
             height: 300px
 
@@ -25,7 +25,7 @@
     .detail-result-main-box
         width: 90%
         margin: auto
-    .carousel-detail-item
+    .detail-carousel-item
         img
             height: 600px
 
@@ -44,7 +44,7 @@
             font-size: 20px
     .results-main-box 
         width: 80%
-    .carousel-detail-item
+    .detail-carousel-item
         img
             height: 900px
 
