--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -1,3 +1,21 @@
-.carousel-detail-item
+.detail-carousel-item
     img
         width: 100%
+
+.detail-result-main-box
+    margin-top: 50px
+
+.icons-description-box
+    +d-flex(center, center)
+    padding: 15px 0
+    a
+        color: $description
+        &:hover
+            color: black
+        i
+            font-size: 30px
+            margin-left: 15px
+
+.general-data-box
+        +d-flex(center, start)
+
