--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -14,6 +14,10 @@
     .detail-carousel-item
         img
             height: 300px
+    .general-data-box
+        div
+            margin: auto
+
 
 @media (min-width: 768px)
     .float-left-md
@@ -28,6 +32,10 @@
     .detail-carousel-item
         img
             height: 600px
+    .general-data-box
+        div
+            +d-flex(center, space-around)
+
 
 @media (min-width: 1024px)
     .detail-result-main-box
