--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -17,5 +17,28 @@
             margin-left: 15px
 
 .general-data-box
-        +d-flex(center, start)
-
+    margin-top: 50px
+    div
+        margin: auto
+        width: 90%
+        margin-top: 30px
+        table
+            tr
+                margin-top: 20px
+                td 
+                    padding: 10px 0
+                    i
+                        font-size: 35px
+                        color: $description
+                    span
+                        font-size: 20px
+                        margin-left: 5px
+                .input
+                    text-align: center  
+                    font-weight: bold
+                    
+.description-box
+    margin-top: 50px
+    p
+        margin-top: 30px
+        font-size: 20px
