--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -21,7 +21,7 @@
     div
         margin: auto
         width: 90%
-        margin-top: 30px
+        margin-top: 25px
         table
             tr
                 margin-top: 20px
@@ -36,9 +36,30 @@
                 .input
                     text-align: center  
                     font-weight: bold
-                    
+
 .description-box
     margin-top: 50px
     p
-        margin-top: 30px
+        padding: 25px 20px
         font-size: 20px
+
+.video-box
+    margin-top: 50px
+    h3
+        margin-bottom: 25px
+    .video
+        padding: 20px
+        margin: auto
+        iframe
+            width: 100%
+
+.location-box
+    margin-top: 50px
+    h3
+        margin-bottom: 25px
+    .google-map
+        padding: 20px
+        margin: auto
+        iframe
+            width: 100%
+
