--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -62,6 +62,8 @@
             height: 430px
 
 
+
+
 @media (min-width: 1440px)
     .navbar-icons-box
         width: 500px
@@ -74,10 +76,16 @@
         width: 80%
     .detail-carousel-item
         img
-            height: 900px
-    .google-map, 
+            height: 700px
     .video
-        width: 80%
+        iframe
+            height: 330px
+    .google-map
+        iframe
+            height: 400px
+
+
+
 
 
 
@@ -88,5 +96,13 @@
         display: none
     .results-main-box 
         width: 95%
+    .description-box
+        p
+            padding: 20px
+    .video,
+    .google-map,
+    .form-box
+        padding: 20px
+
 
 
