--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -39,16 +39,17 @@
 
 .description-box
     margin-top: 50px
-    p
-        padding: 25px 20px
-        font-size: 20px
+    h3
+        margin-bottom: 25px
+        p
+            font-size: 20px
+            margin-top: 0
 
 .video-box
     margin-top: 50px
     h3
         margin-bottom: 25px
     .video
-        padding: 20px
         margin: auto
         iframe
             width: 100%
@@ -58,8 +59,18 @@
     h3
         margin-bottom: 25px
     .google-map
-        padding: 20px
         margin: auto
         iframe
             width: 100%
 
+.send-message-box
+    margin-top: 50px
+    h3
+        margin-bottom: 25px
+    .form-box
+        .form-group
+            input
+                &::placeholder
+                    opacity: .3
+        button
+            width: 100%
