--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -12,3 +12,7 @@
     background-size: cover
     background-position: center center
     background-attachment: fixed
+
+.body-detail,
+.body-results
+    background: $body-bg
