Adding titles to all pages

--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -16,3 +16,10 @@
 .body-detail,
 .body-results
     background: $body-bg
+
+main
+    h1
+        font-family: 'Lobster', cursive;
+        text-align: center
+        margin-top: 30px
+
