--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -2,9 +2,8 @@
 @import "components/basics"
 @import "components/mixins"
 @import "components/media-queries"
+@import "components/navbar"
 
-
-@import "components/home/navbar"
 @import "components/home/main"
 
 
