--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@
 .body-results {
   background: rgba(223, 228, 234, 0.5); }
 
+main h1 {
+  font-family: 'Lobster', cursive;
+  text-align: center;
+  margin-top: 30px; }
+
 @media (max-width: 767px) {
   .navbar-logo-box {
     margin: auto; }
@@ -133,10 +138,8 @@
 main .search-main-box {
   padding: 20px;
   margin: 150px auto; }
-  main .search-main-box h2 {
-    color: white;
-    text-align: center;
-    margin-bottom: 10px; }
+  main .search-main-box h1 {
+    color: white; }
   main .search-main-box .search-box {
     background: rgba(149, 165, 166, 0.5);
     border-radius: 5px;
@@ -149,6 +152,7 @@ main .search-main-box {
       padding: 10px; }
     main .search-main-box .search-box .selectors-box button {
       font-size: 18px;
+      color: white;
       font-weight: bold;
       padding: 10px;
       border-radius: 5px;
@@ -187,8 +191,8 @@ main .search-main-box {
 .detail-carousel-item img {
   width: 100%; }
 
-.detail-result-main-box {
-  margin-top: 50px; }
+.detail-result-1 {
+  margin-top: 30px; }
 
 .icons-description-box {
   display: flex;
