--- a/sass/components/detail/_main-detail.sass
+++ b/sass/components/detail/_main-detail.sass
@@ -2,8 +2,8 @@
     img
         width: 100%
 
-.detail-result-main-box
-    margin-top: 50px
+.detail-result-1
+    margin-top: 30px
 
 .icons-description-box
     +d-flex(center, center)
