--- a/sass/components/home/_main.sass
+++ b/sass/components/home/_main.sass
@@ -2,10 +2,8 @@ main
     .search-main-box
         padding: 20px
         margin: 150px auto
-        h2
+        h1
             color: white
-            text-align: center
-            margin-bottom: 10px
         .search-box
             background: $search-box-bg
             border-radius: 5px
@@ -19,6 +17,7 @@ main
                     padding: 10px
                 button
                     font-size: 18px
+                    color: white
                     font-weight: bold
                     padding: 10px
                     border-radius: 5px
