Linking results to detail page

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -4,7 +4,7 @@
 @import "components/media-queries"
 @import "components/navbar"
 
-@import "components/home/main"
+@import "components/home/main-home"
 
 
 @import "components/result/main-result"
