--- a/sass/components/_basics.sass
+++ b/sass/components/_basics.sass
@@ -9,8 +9,8 @@
 
 .body-home
     background-image: url('../css/images/dublin-bg.jpg')
+    background-repeat: no-repeat
     background-size: cover
-    background-position: center center
     background-attachment: fixed
 
 .body-detail,
