--- a/sass/components/_navbar.sass
+++ b/sass/components/_navbar.sass
@@ -1,5 +1,6 @@
 
 .nav
+    height: 100px
     width: 100%
     background: $navbar-bg
     +d-flex(center, space-between)
@@ -10,19 +11,19 @@
             height: 60px
         h5
             font-family: 'Lobster', cursive;
-            font-size: 40px
+            font-size: 45px
             color: white
             margin-left: 20px 
     .navbar-icons-box
         +d-flex(center, space-around)
         a
             i
-                font-size: 18px
+                font-size: 25px
                 color: white
                 padding: 10px 0
                 span
-                    margin-left: 5px
-                    font-size: 18px
+                    margin-left: 15px
+                    font-size: 25px
                     font-weight: lighter
 
 
