--- a/sass/components/_variables.sass
+++ b/sass/components/_variables.sass
@@ -1,5 +1,7 @@
 $border-black: 1px solid black
 $border-red: 2px solid red
+$border-white: 2px solid white
+
 
 
 
@@ -9,3 +11,4 @@ $result-box-bg: white
 $description: rgba(89, 98, 117, 1.0)
 $title-card: #1e272e
 $body-bg: rgba(223, 228, 234, .5)
+$footer-bg: #3D3D3D
