--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -1,13 +1,14 @@
+
 @import "components/variables"
-@import "components/basics"
 @import "components/mixins"
 @import "components/media-queries"
+
+@import "components/basics"
 @import "components/navbar"
+@import "components/footer"
 
 @import "components/home/main-home"
 
-
 @import "components/result/main-result"
-
 
 @import "components/detail/main-detail"
