--- a/sass/components/home/_main-home.sass
+++ b/sass/components/home/_main-home.sass
@@ -1,13 +1,17 @@
 main
     .search-main-box
         padding: 20px
-        margin: 150px auto
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
         h1
+            margin-top: 0
             color: white
         .search-box
             background: $search-box-bg
             border-radius: 5px
-            padding: 20px 10px
+            padding: 20px
             h5
                 margin-bottom: 10px
             .selectors-box
@@ -23,4 +27,11 @@ main
                     border-radius: 5px
                     background: $navbar-bg
 
+.footer-home
+    position: absolute
+    bottom: 0
+
+.navbar-home
+    position: absolute
+    top: 0
 
