--- a/sass/components/_footer.sass
+++ b/sass/components/_footer.sass
@@ -1,4 +1,19 @@
-footer
+.footer
     height: 100px
     width: 100%
     background: $footer-bg
+    div
+        a
+            i
+                color: white
+    ul
+        +d-flex(center, space-around)
+        margin-bottom: 0
+        a
+            color: white
+            font-size: 16px
+            font-weight: lighter
+
+.footer-result,
+.footer-detail
+    margin-top: 30px
