--- a/sass/components/_media-queries.sass
+++ b/sass/components/_media-queries.sass
@@ -29,6 +29,10 @@
     .video
         iframe
             height: 180px
+    .footer
+        div
+            margin: auto
+
 
 
 
@@ -58,6 +62,11 @@
     .video
         iframe
             height: 350px
+    .footer
+        +d-flex(center, space-around)
+        ul
+            width: 350px
+
 
 
 
